--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-MONGO_URI = "mongodb+srv://sowibou032:w3iK6uzbWXfNyQMa@alliocluster.5e51yeh.mongodb.net/LycsAllio?retryWrites=true&w=majority"
-accessKEY = "AKIA3MI3POHBYWPIJFGG"
+MONGO_URI="mongodb+srv://sowibou032:w3iK6uzbWXfNyQMa@alliocluster.5e51yeh.mongodb.net/LycsAllio?retryWrites=true&w=majority"
+accessKEY="AKIA3MI3POHBYWPIJFGG"
+USERNAME='ibrahima'
+PASSWORD='jKjquQwYPZtcfJDAA6Rg'
 secretAccessKey = "XbP6bwK+0Xit6LZnoVgYLXArZ+CpsV3CJB3vUTeV"
