--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ MONGO_URI="mongodb+srv://sowibou032:w3iK6uzbWXfNyQMa@alliocluster.5e51yeh.mongod
 accessKEY="AKIA3MI3POHBYWPIJFGG"
 USERNAME='ibrahima'
 PASSWORD='jKjquQwYPZtcfJDAA6Rg'
+PORT = 3000
 secretAccessKey = "XbP6bwK+0Xit6LZnoVgYLXArZ+CpsV3CJB3vUTeV"
