--- a/.env
+++ b/.env
@@ -4,3 +4,8 @@ USERNAME='ibrahima'
 PASSWORD='jKjquQwYPZtcfJDAA6Rg'
 PORT = 3000
 secretAccessKey = "XbP6bwK+0Xit6LZnoVgYLXArZ+CpsV3CJB3vUTeV"
+
+SESSION_SECRET=AKIA3MI3POHBYWPIJFGG0Xit6LZnoVgYLXArZ
+SESSION_MAX_AGE=3600000
+SESSION_RESAVE=false
+SESSION_SAVE_UNINITIALIZED=false
