--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 MONGO_URI="mongodb+srv://sowibou032:w3iK6uzbWXfNyQMa@alliocluster.5e51yeh.mongodb.net/LycsAllio?retryWrites=true&w=majority"
 accessKEY="AKIA3MI3POHBYWPIJFGG"
 USERNAME='ibrahima'
-PASSWORD='jKjquQwYPZtcfJDAA6Rg'
-PORT = 3000
-secretAccessKey = "XbP6bwK+0Xit6LZnoVgYLXArZ+CpsV3CJB3vUTeV"
+PASSWORD=jKjquQwYPZtcfJDAA6Rg
+PORT=3000
+secretAccessKey="XbP6bwK+0Xit6LZnoVgYLXArZ+CpsV3CJB3vUTeV"
 SESSION_SECRET=AKIA3MI3POHBYWPIJFGG0Xit6LZnoVgYLXArZ
 SESSION_MAX_AGE=3600000
 SESSION_RESAVE=false
