agent creation and sms sending conf

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/multer-gridfs-storage": "^4.0.8",
     "aws-sdk": "^2.1542.0",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
