--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
     "@nestjs/typeorm": "^10.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/multer-gridfs-storage": "^4.0.8",
+    "argon2": "^0.40.1",
     "aws-sdk": "^2.1542.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.6",
+    "cryptr": "^6.3.0",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
@@ -62,6 +65,7 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/passport-local": "^1.0.38",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
