--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     server_name change-me.org;
-
+// thx
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
