deploy without network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
     # if your service is running outside of docker uncomment this and comment out networks section
     #network_mode: bridge
-    networks:
-      - dockernet
+    # networks:
+    #   - dockernet
   certbot:
     image: certbot/certbot
     restart: unless-stopped
