--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "cryptr": "^6.3.0",
+    "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "firebase-admin": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -59,6 +61,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/config": "^3.3.4",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
