--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,4 @@ jobs:
         touch .env
         echo "${{secrets.PROD_ENV_FILE}}" > .env
     - run: npm run build
+    - run: pm2 restart backendAllioV10
