--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "cryptr": "^6.3.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
-    "firebase-admin": "^12.0.0",
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
