--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,4 @@ jobs:
 
     steps:
     - name: Deploy with PM2
-      run: pm2 restart backendAllioV2
+      run: pm2 start dist/main.js --name "backendAllioV0"
