--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
     - run: | 
         touch .env
         echo "${{secrets.PROD_ENV_FILE}}" > .env
+        cat .env
     - run: npm run build
 
   deploy:
