--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
     - run: npm install
     - run: | 
         touch .env
-        echo "${{secrets.PROD_ENV_FILE}}" > .env
+        cp /dev/stdin .env <<<"${{ secrets.PROD_ENV_FILE }}"
+        # echo "${{secrets.PROD_ENV_FILE}}" > .env
         cat .env
     - run: npm run build
 
