--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,7 @@ jobs:
     - run: npm install
     - run: | 
         touch .env
-        cp "${{ secrets.PROD_ENV_FILE }}" .env
-        # echo "${{secrets.PROD_ENV_FILE}}" > .env
-        cat .env
+        echo "${{secrets.PROD_ENV_FILE}}" > .env
     - run: npm run build
 
   deploy:
