--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,8 @@ jobs:
     - run: npm install
     - run: | 
         touch .env
-        echo "${{secrets.PROD_ENV_FILE}}" >> .env
+        echo "${{secrets.PROD_ENV_FILE}}" | tr -d '\r' > .env
+        # echo "${{secrets.PROD_ENV_FILE}}" >> .env
     - run: npm run build
 
   deploy:
