--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.2.0",
+    "@nestjs/throttler": "^5.1.2",
     "@nestjs/typeorm": "^10.0.1",
     "@types/bcrypt": "^5.0.2",
     "@types/multer-gridfs-storage": "^4.0.8",
@@ -43,10 +44,13 @@
     "config": "^3.3.11",
     "cookie-parser": "^1.4.6",
     "cryptr": "^6.3.0",
+    "csrf": "^3.1.0",
+    "csurf": "^1.11.0",
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "firebase": "^10.11.1",
     "firebase-admin": "^12.1.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer-gridfs-storage": "^5.0.2",
     "nodemailer": "^6.9.8",
